# apps/api/src/app.module.ts
@@ -4,8 +4,9 @@ import { AuthModule } from "./auth/auth.module";
 import { FamilySetupModule } from "./family-setup/family-setup.module";
 import { HealthModule } from "./health/health.module";
 import { HomeworkModule } from "./homework/homework.module";
+import { MediaAssetsModule } from "./media-assets/media-assets.module";
 
 @Module({
-  imports: [HealthModule, AuthModule, FamilySetupModule, HomeworkModule],
+  imports: [HealthModule, AuthModule, FamilySetupModule, HomeworkModule, MediaAssetsModule],
 })
 export class AppModule {}
